Package changes for deployment

--- a/package.json
+++ b/package.json
@@ -1,5 +1,4 @@
 {
-  "homepage": "https://mikolajbielinski.github.io/country-quiz-react",
   "name": "country-quiz",
   "version": "0.1.0",
   "private": true,
@@ -37,5 +36,8 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "gh-pages": "^4.0.0"
   }
 }
